radix selector layout shift bug fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -50,20 +50,20 @@
   background-color: var(--gray-900);
 }
 
+/* Override Radix styles to prevent layout shift from Selector component when open */
 html {
-  scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable;
 }
 html body[data-scroll-locked] {
+  overflow: visible !important;
+  margin-right: 0 !important;
   padding-right: 0 !important;
   --removed-body-scroll-bar-size: 0px !important;
 }
-body {
-   margin-right: 0px !important;
-}
-/* Ensure sticky elements do not move */
 .sticky-scroll-lock {
   padding-right: var(--removed-body-scroll-bar-size);
 }
+
 
 
 ::selection {
